BuildRest: Add autoPassword, passsword1, password2 and sendEmail fields to the schema
